--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,86 @@
 body {
+    display: grid;
+    align-items: center;
+    justify-items: center;
     background-color: lightgreen;
+    margin: 16px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    main {
+        padding: 2em;
+        display: grid;
+        border-radius: .3em;
+        justify-items: center;
+        background-color: lightcyan;
+        section {
+            border: 5px solid lightgreen;
+            border-radius: .5em;
+            padding: 2em;
+            display: grid;
+            justify-items: center;
+            
+            #numberForm {
+                display: grid;
+                padding: 1em;
+                #numberInput {
+                    font-size: 1em;
+                    font-weight: bold;
+                    border: 1px solid lightgreen;
+                    outline: none;
+                    padding: .3em;
+                    text-align: center;
+                    height: 2em;
+                    border-radius: .5em;
+                }
+                #numberFormError {
+                    margin: 0;
+                    padding: .5em;
+                    height: 1.5em;
+                }
+                button {
+                    opacity: .6;
+                    transform: scale(1);
+                    padding: .5em;
+                    color: green;
+                    background-color: lightgreen;
+                    border: 2px solid green;
+                    animation: all 0.5s ease;
+                }
+                button:hover {
+                    opacity: 1;
+                    cursor: pointer;
+                    transform: scale(1.03);
+                }
+                
+            }
+            ul {
+                display: flex;
+                padding: 0;
+                gap: 2em;
+                justify-items: center;
+                margin: 0;
+                    li {
+                        list-style: none;
+                        display: flex;
+                        gap: .5em;
+                        font-size: 1.3em;
+                        padding: .5em 1em;
+                        background-color: lightgreen;
+                        button {
+                            background-color: lightcyan;
+                            padding: .5em 1.5em;
+                            border: 1px solid transparent;
+                            animation: all .3s ease;
+                            color: lightcoral;
+                        }
+                        button:hover {
+                            cursor: pointer;
+                            background-color: lightcoral;
+                            border: 1px solid red;
+                            color: red;
+                        }
+                    }
+                    
+                }
+        }
+    }
 }
